# WealthPulse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: daily_brief.yml
config/: config.example.yaml
scripts/: capture_screenshots.py  export_carousel.py  linkedin_carousel.html  recapture_light.py
src/wealthpulse/: __init__.py  __main__.py  cli.py
src/wealthpulse/core/: __init__.py  config.py  dashboard.py  email_sender.py  market_data.py  portfolio.py
src/wealthpulse/parsers/: __init__.py  angel_one.py  base.py  dhan.py  epfo.py  fidelity.py  five_paisa.py  groww.py  hdfc_securities.py  icici_direct.py  kotak.py  morgan_stanley.py  mutual_funds.py  nps.py  upstox.py  zerodha.py
src/wealthpulse/samples/: __init__.py  sample_portfolio.json
src/wealthpulse/screener/: __init__.py
src/wealthpulse/templates/: __init__.py  dashboard.html  email_brief.html
